[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/PlayerBody.gd" type="Script" id=1]
[ext_resource path="res://scripts/cammy/FPSMonitor.gd" type="Script" id=2]
[ext_resource path="res://scripts/cammy/Transtion.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4

[sub_resource type="SphereShape" id=2]
radius = 0.337365

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float progress : hint_range(0, 1.1) = 0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	vec2 centerUV = UV - vec2(0.5, 0.5);
	float fromCenter = abs(centerUV.x) + abs(centerUV.y);
	COLOR.a *= smoothstep(progress - .1, progress + .1, fromCenter);
	
	float in_edge = 1. - smoothstep(progress - .1, progress + .1, fromCenter);
	float edge = min(in_edge, smoothstep(progress - .1, progress + .1, 1. - fromCenter));
	
	COLOR.rgb = mix(COLOR.rgb, vec3(1.), in_edge);
	//COLOR.a = max(COLOR.a, edge);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/progress = 0.381

[node name="Player" type="Spatial"]

[node name="PlayerBody" type="RigidBody" parent="." groups=["clockable"]]
collision_layer = 8
mode = 2
custom_integrator = true
script = ExtResource( 1 )

[node name="RemoteTransform" type="RemoteTransform" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
remote_path = NodePath("../../CameraHolder")
update_rotation = false
update_scale = false

[node name="CollisionShape" type="CollisionShape" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.927389, 0 )
shape = SubResource( 1 )

[node name="CheckGround" type="Area" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.272055, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="PlayerBody/CheckGround"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0420006, 0 )
shape = SubResource( 2 )

[node name="ShootCooldown" type="Timer" parent="PlayerBody"]
wait_time = 0.06
one_shot = true

[node name="WarpTimer" type="Timer" parent="PlayerBody"]
wait_time = 0.24
one_shot = true

[node name="ShootFrom" type="Position3D" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34604, -0.254964 )

[node name="CameraHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="Camera" type="Camera" parent="CameraHolder"]
current = true
fov = 55.0
far = 500.0

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="FPSBG" type="ColorRect" parent="HUD"]
margin_right = 50.0
margin_bottom = 13.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.192157 )

[node name="FPSMonitor" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FPS 100"
script = ExtResource( 2 )

[node name="Crosshair" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -2.5
margin_right = 0.5
margin_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1, 5 )
mouse_filter = 2

[node name="ColorRect2" type="ColorRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -0.5
margin_right = 2.5
margin_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 5, 1 )
mouse_filter = 2

[node name="Transtion" type="TextureRect" parent="HUD"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch_mode = 4
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="HUD/Transtion"]
one_shot = true

[node name="Stats" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_bottom = 40.0

[node name="HealthContainer" type="HBoxContainer" parent="HUD/Stats"]
margin_right = 260.0
margin_bottom = 20.0

[node name="ColorRect" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect2" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect3" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect4" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect5" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect6" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect7" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 144.0
margin_right = 164.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect8" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 168.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect9" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 192.0
margin_right = 212.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect10" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 216.0
margin_right = 236.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect11" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 240.0
margin_right = 260.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="TimeBG" type="ColorRect" parent="HUD/Stats"]
margin_left = 210.0
margin_top = 24.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 16 )
size_flags_horizontal = 8
color = Color( 0.341176, 0.341176, 0.341176, 0.607843 )

[node name="Time" type="Label" parent="HUD/Stats/TimeBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -7.0
margin_right = 18.0
margin_bottom = 7.0
text = "00:00"

[connection signal="body_shape_entered" from="PlayerBody" to="PlayerBody" method="_on_PlayerBody_body_shape_entered"]
[connection signal="timeout" from="PlayerBody/ShootCooldown" to="PlayerBody" method="_on_ShootCooldown_timeout"]
[connection signal="timeout" from="PlayerBody/WarpTimer" to="PlayerBody" method="_on_WarpTimer_timeout"]
